# Flare

./: .gitignore  AllRoPE_config.json  CUDA_TROUBLESHOOTING.md  INTERACTIVE_TRAINING_GUIDE.md  PROJECT_STRUCTURE.md  README_MIGRATION.md  SomeRoPE20-34_config.json  SomeRoPE4-3-34_config.json  attention_scores-20～.csv  attention_scores-allrope.csv  attention_scores-nope.csv  attention_scores-somerope[20-33].csv  download_wikitext_ms.py  ds_config_zero1.json  eval_wikitext_ppl.py  evaluate_model.py  evaluate_model_enhanced.py  fix_cuda.sh  interactive_config.py  mmlu_evaluate.py  model_responses-allrope.jsonl  model_responses-qwen2.5.jsonl  model_responses-somerope.jsonl  model_responses-somerope[20-32].jsonl  niah_probe.py  patch_qwen_rope.py  pyproject.toml  requirements.txt  requirements_migration.txt  run_training.sh  simple_config.json  test_error_handling.py  test_memory_optimization.py  test_migration.py  test_redpajama_with_trust.py  test_small_c4.py  test_working_datasets.py  train.py  train_qwen-signal.py  train_qwen-stage.py  (+6 more)
configs/: simple_config.json  training_config.json  training_config_gpu_examples.json  training_config_simple.json
docs/: README_MIGRATION.md  README_SIMPLE.md
results/: attention_scores-allrope.csv  attention_scores-qwen2.5.csv  attention_scores-somerope[20-32].csv  migration_test_report.json  model_responses-allrope.jsonl
scripts/: run_simple.sh  run_training.sh  run_training_simple.sh
test_output/: memory_report.json
tests/: check_gpus.py  test_gpu_selection.py  test_migration.py  test_simple_setup.py
training/: error_handler.py  (+14 more)
(+24 files in other folders)
