[project]
name = "flare"
version = "0.1.0"
description = "Qwen2.5 fine-tuning with RoPE modifications and attention analysis"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.24.0",
    "deepspeed>=0.12.0",
    "evaluate>=0.4.0",
    "tqdm>=4.64.0",
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
    "pillow>=9.0.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "jsonlines>=3.1.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.6.0",
]
